--- a/website/store/templates/index.html
+++ b/website/store/templates/index.html
@@ -56,15 +56,8 @@
           <div class="row mt-5">
             <div class="col">
               <p class="text-left">
-              <a href="/home/static/wallet/index.html" >Brownie Coin</a> is a revolutionary software product that seamlessly combines the capabilities of AI, the security of blockchain, and the reliability of traditional Web2 infrastructure. It paves the way for a secure, forward-thinking digital experience, redefining the boundaries of what's possible in the tech world. Welcome to the future with Brownie Coin.
+              In the ever-evolving landscape of technology and problem-solving, Gkenetic stands at the forefront, pioneering a revolutionary approach to tackle complex challenges. Harnessing the power of genetic programming, GKenetic specializes in creating custom genetic programs that are tailored to solve intricate problems across various domains.
               </p>
-            </div>
-          </div>
-          <div class="row mt-3">
-            <div class="col">
-              <small>
-               Brownie Coin is developed using the Python programming language, harnessing its versatility and power to deliver a seamless fusion of AI, blockchain technology, and traditional Web2 infrastructure. It's the future of tech, crafted with Python precision. Welcome to the future with Brownie Coin.
-              </small>
             </div>
           </div>
 
