--- a/website/store/templates/index.html
+++ b/website/store/templates/index.html
@@ -21,7 +21,7 @@
           <div class="row mt-3 ">
             <div class="col">
 
-              <form  action="/home/login/" class="user" method="POST">
+              <form  action="/login/" class="user" method="POST">
                   {% csrf_token %}
                       <div class="row justify-content-center">
                           <div class="col-12">
@@ -63,7 +63,7 @@
 
             <div class="row mt-5">
               <div class="col">
-                Don't have an accout? <a href="/home/add_phone/" >Sign Up</a>
+                Don't have an accout? <a href="/add_phone/" >Sign Up</a>
               </div>
             </div>
         </div>
