--- a/website/store/templates/index.html
+++ b/website/store/templates/index.html
@@ -20,7 +20,7 @@
 
           <div class="row mt-3 ">
             <div class="col">
-
+              <img src="/static/images/home.png" class="img-fluid" alt="Responsive Image">
               <form  action="/login/" class="user" method="POST">
                   {% csrf_token %}
                       <div class="row justify-content-center">
