--- a/website/store/templates/index.html
+++ b/website/store/templates/index.html
@@ -23,7 +23,7 @@
               <img src="/static/images/home.png" class="img-fluid" alt="Responsive Image">
               <form  action="/login/" class="user" method="POST">
                   {% csrf_token %}
-                      <div class="row justify-content-center">
+                      <div class="row mt-5 justify-content-center">
                           <div class="col-12">
                               <div class="form-group">
                                   <input type="text" class="form-control form-control-user" id="username" name="username" aria-describedby="emailHelp" placeholder="Enter Email Address...">
