--- a/website/store/templates/index.html
+++ b/website/store/templates/index.html
@@ -56,9 +56,9 @@
           <div class="row mt-5">
             <div class="col">
               <p class="text-left">
-                <a href="https://github.com/gkenetic" ><i class="fab fa-github large-icon"></i></a>
-                <a href="https://www.tiktok.com/@gkenetic" ><i class="fab fa-tiktok large-icon"></i></a>
-                <a href="https://x.com/gkenetic" ><i class="fab fa-twitter large-icon"></i></a>
+                <a href="https://github.com/gkenetic" ><i class="fab fa-github fa-3x"></i></a>
+                <a href="https://www.tiktok.com/@gkenetic" ><i class="fab fa-tiktok fa-3x"></i></a>
+                <a href="https://x.com/gkenetic" ><i class="fab fa-twitter fa-3x"></i></a>
               <BR><BR>
               In the ever-evolving landscape of technology and problem-solving, Gkenetic stands at the forefront, pioneering a revolutionary approach to tackle complex challenges. Harnessing the power of genetic programming, GKenetic specializes in creating custom genetic programs that are tailored to solve intricate problems across various domains.
               </p>
