--- a/website/store/templates/sample.html
+++ b/website/store/templates/sample.html
@@ -20,7 +20,7 @@
 
           <div class="row mt-3 ">
             <div class="col">
-              {best_individual}
+              {{best_individual}}
             </div>
           </div>
 
