--- a/website/store/templates/index.html
+++ b/website/store/templates/index.html
@@ -70,6 +70,17 @@
                 Don't have an accout? <a href="/add_phone/" >Sign Up</a>
               </div>
             </div>
+
+            <!-- Description List -->
+            <div class="row mt-5">
+              <div class="col">
+            <dl class="mt-3">
+              <dt class="fw-bold">Basic Model</dt>
+              <dd><a href="/gkenetic/">run</a></dd>
+            </dl>
+            </div>
+          </div>
+
         </div>
       </div>
   </div>
