--- a/website/store/templates/index.html
+++ b/website/store/templates/index.html
@@ -77,6 +77,8 @@
             <dl class="mt-3">
               <dt class="fw-bold">Basic Model</dt>
               <dd><a href="/gkenetic/">run</a></dd>
+                <dt class="fw-bold">Basic Model As Sub Process</dt>
+                <dd><a href="/gkenetic_sp/">run</a></dd>
             </dl>
             </div>
           </div>
