--- a/website/store/templates/sample.html
+++ b/website/store/templates/sample.html
@@ -20,6 +20,7 @@
 
           <div class="row mt-3 ">
             <div class="col">
+              {{error}}
               {{best_individual}}
             </div>
           </div>
