--- a/website/store/templates/index.html
+++ b/website/store/templates/index.html
@@ -60,6 +60,8 @@
                 <a href="https://www.tiktok.com/@gkenetic" style="padding: 10px;"><i class="fab fa-tiktok fa-3x"></i></a>
                 <a href="https://x.com/gkenetic" style="padding: 10px;"><i class="fab fa-twitter fa-3x"></i></a>
               <BR><BR>
+              Gkenetic is dedicated to eradicating cancer through cutting-edge genetic programming and evolutionary algorithms, pioneering innovative solutions for a cancer-free future.
+              <BR>  
               In the ever-evolving landscape of technology and problem-solving, Gkenetic stands at the forefront, pioneering a revolutionary approach to tackle complex challenges. Harnessing the power of genetic programming, GKenetic specializes in creating custom genetic programs that are tailored to solve intricate problems across various domains.
               </p>
             </div>
@@ -76,7 +78,7 @@
               <div class="col">
             <dl class="mt-3">
               <dt class="fw-bold">Basic Model</dt>
-              <dd><a href="/gkenetic/">run</a></dd> 
+              <dd><a href="/gkenetic/">run</a></dd>
             </dl>
             </div>
           </div>
