--- a/website/store/templates/index.html
+++ b/website/store/templates/index.html
@@ -61,7 +61,7 @@
                 <a href="https://x.com/gkenetic" style="padding: 10px;"><i class="fab fa-twitter fa-3x"></i></a>
               <BR><BR>
               Gkenetic is dedicated to eradicating cancer through cutting-edge genetic programming and evolutionary algorithms, pioneering innovative solutions for a cancer-free future.
-              <BR>  <BR>  
+              <BR>  <BR>
               In the ever-evolving landscape of technology and problem-solving, Gkenetic stands at the forefront, pioneering a revolutionary approach to tackle complex challenges. Harnessing the power of genetic programming, GKenetic specializes in creating custom genetic programs that are tailored to solve intricate problems across various domains.
               </p>
             </div>
@@ -77,8 +77,10 @@
             <div class="row mt-5">
               <div class="col">
             <dl class="mt-3">
-              <dt class="fw-bold">Basic Model</dt>
+              <dt class="fw-bold">Bitcoin Price 16 Hours</dt>
               <dd><a href="/gkenetic/">run</a></dd>
+              <dt class="fw-bold">Bitcoin Price 1 Hour</dt>
+              <dd><a href="/gkenetic/?model=btc_h">run</a></dd>
             </dl>
             </div>
           </div>
