--- a/website/store/templates/index.html
+++ b/website/store/templates/index.html
@@ -81,6 +81,8 @@
               <dd><a href="/gkenetic/">run</a></dd>
               <dt class="fw-bold">Bitcoin Price 1 Hour</dt>
               <dd><a href="/gkenetic/?model=btc_h">run</a></dd>
+              <dt class="fw-bold">TSLA Price 1 Hour</dt>
+              <dd><a href="/gkenetic/?model=tsla_h">run</a></dd>
             </dl>
             </div>
           </div>
