--- a/website/store/templates/sample.html
+++ b/website/store/templates/sample.html
@@ -29,5 +29,10 @@
       </div>
   </div>
 </div>
-
+<script>
+    // Add this script to reload the page after 65 seconds
+    setTimeout(function () {
+        location.reload();
+    }, 65000); // 65 seconds in milliseconds
+</script>
 {% endblock %}
