--- a/website/store/templates/sample.html
+++ b/website/store/templates/sample.html
@@ -30,9 +30,12 @@
   </div>
 </div>
 <script>
-    // Add this script to reload the page after 65 seconds
-    setTimeout(function () {
-        location.reload();
-    }, 65000); // 65 seconds in milliseconds
+    document.addEventListener("DOMContentLoaded", function () {
+        // Add this script to reload the page after 65 seconds
+        setTimeout(function () {
+            location.reload();
+        }, 65000); // 65 seconds in milliseconds
+    });
 </script>
+
 {% endblock %}
