--- a/website/store/templates/index.html
+++ b/website/store/templates/index.html
@@ -73,6 +73,12 @@
               </div>
             </div>
 
+          <div class="row mt-5">
+            <div class="p-5">
+              <canvas id="bitcoin_price_chart" ></canvas>
+            </div>
+          </div>
+
             <!-- Description List -->
             <div class="row mt-5">
               <div class="col">
