--- a/website/store/templates/base_home.html
+++ b/website/store/templates/base_home.html
@@ -13,7 +13,7 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 <link href="/static/css/style_home.css?v=1" rel="stylesheet">
-
+<script src="/static/js/script.bitcoin_price.js"></script>
 </head>
 <body style="background-color: black;">
 
