--- a/website/store/templates/index.html
+++ b/website/store/templates/index.html
@@ -75,7 +75,7 @@
 
           <div class="row mt-5">
             <div class="p-5">
-              <canvas id="bitcoinpricechart" ></canvas>
+              <canvas id="bitcoinpricechart" style="width: 100%;"></canvas>
             </div>
           </div>
 
