--- a/website/store/templates/index.html
+++ b/website/store/templates/index.html
@@ -16,8 +16,8 @@
 <div class="content mt-1 dark-container">
     <div class="col-12">
 
-      <img src="/static/images/home.png" class="img-fluid" alt="Responsive Image">
-      <BR><BR>  
+      <img src="/static/images/home.png" class="img-fluid" alt="Responsive Image" style="width: 100%;">
+      <BR><BR>
       <canvas id="bitcoinpricechart" style="width: 100%;"></canvas>
       <div class="card text-center dark-container">
         <div class="card-body">
