--- a/website/store/templates/index.html
+++ b/website/store/templates/index.html
@@ -99,4 +99,12 @@
   </div>
 </div>
 
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        // Add this script to reload the page after 65 seconds
+        setTimeout(function () {
+            location.reload();
+        }, 61000); // 65 seconds in milliseconds
+    });
+</script>
 {% endblock %}
