--- a/website/store/templates/index.html
+++ b/website/store/templates/index.html
@@ -19,6 +19,8 @@
       <img src="/static/images/home.png" class="img-fluid" alt="Responsive Image" style="width: 100%;">
       <BR><BR>
       <canvas id="bitcoinpricechart" style="width: 100%;"></canvas>
+      <BR><BR>
+      <canvas id="bitcoinpricechartday" style="width: 100%;"></canvas>
       <div class="card text-center dark-container">
         <div class="card-body">
 
