--- a/website/store/templates/base_home.html
+++ b/website/store/templates/base_home.html
@@ -14,6 +14,7 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 <link href="/static/css/style_home.css?v=1" rel="stylesheet">
 <script src="/static/js/script.bitcoin_price.js"></script>
+<script src="/static/js/script.bitcoin_price_day.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@^3"></script>
 <script src="https://cdn.jsdelivr.net/npm/moment@^2"></script>
 <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-moment@^1"></script>
