--- a/website/store/templates/index.html
+++ b/website/store/templates/index.html
@@ -22,6 +22,8 @@
       <BR><BR>
       <canvas id="bitcoinpricechartday" style="width: 100%;"></canvas>
       <BR><BR>
+      <canvas id="bitcoinpricechart15" style="width: 100%;"></canvas>
+      <BR><BR>
       <div class="card text-center dark-container">
         <div class="card-body">
 
