--- a/website/store/templates/base_home.html
+++ b/website/store/templates/base_home.html
@@ -15,6 +15,7 @@
 <link href="/static/css/style_home.css?v=1" rel="stylesheet">
 <script src="/static/js/script.bitcoin_price.js"></script>
 <script src="/static/js/script.bitcoin_price_day.js?v=1"></script>
+<script src="/static/js/script.bitcoin_price_15.js?v=1"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@^3"></script>
 <script src="https://cdn.jsdelivr.net/npm/moment@^2"></script>
 <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-moment@^1"></script>
